moved config into assets folder