@@ -1,5 +1,6 @@
 package dev.dannytaylor.streamtimer;
 
+import dev.dannytaylor.streamtimer.config.StreamTimerConfig;
 import dev.dannytaylor.streamtimer.data.StaticVariables;
 
 import java.io.InputStream;
@@ -8,30 +9,43 @@ import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.Enumeration;
-import java.util.concurrent.CountDownLatch;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.stream.Stream;
 
 public class StreamTimerResources {
-    public static CountDownLatch latch = new CountDownLatch(1);
     private static final String location = "assets/streamtimer/export/";
 
     public static void extract() {
         try {
             Path outDir = Path.of(StaticVariables.name + "Assets");
             Files.createDirectories(outDir);
-            ClassLoader loader = StreamTimerResources.class.getClassLoader();
-            URL locationUrl = loader.getResource(location);
-            if (locationUrl == null) throw new RuntimeException("Assets not found: " + location);
-            if ("jar".equals(locationUrl.getProtocol())) extractFromJar(locationUrl, outDir);
-            else extractFromFileSystem(Path.of(locationUrl.toURI()), outDir);
+            try {
+                Path configPath = Paths.get(StaticVariables.id + ".toml");
+                Path targetPath = outDir.resolve(StaticVariables.id + ".toml");
+                if (Files.exists(configPath)) {
+                    boolean shouldReload = Files.exists(targetPath);
+                    Files.move(configPath, targetPath, StandardCopyOption.REPLACE_EXISTING);
+                    if (shouldReload) StreamTimerConfig.reload();
+                }
+            } catch (Exception error) {
+                System.err.println("Failed to move config: " + error);
+            }
+            try {
+                ClassLoader loader = StreamTimerResources.class.getClassLoader();
+                URL locationUrl = loader.getResource(location);
+                if (locationUrl == null) throw new RuntimeException("Assets not found: " + location);
+                if ("jar".equals(locationUrl.getProtocol())) extractFromJar(locationUrl, outDir);
+                else extractFromFileSystem(Path.of(locationUrl.toURI()), outDir);
+            } catch (Exception error) {
+                System.err.println("Failed to copy assets: " + error);
+            }
         } catch (Exception error) {
-            System.err.println("Failed to copy assets: " + error);
+            System.err.println("Failed to process resources: " + error);
         }
-        latch.countDown();
     }
 
     private static void extractFromJar(URL resourceUrl, Path outputDir) {
@@ -61,7 +75,7 @@ public class StreamTimerResources {
 
     private static void extractFromFileSystem(Path sourceDir, Path outputDir) {
         try (Stream<Path> files = Files.walk(sourceDir)) {
-            files.forEach(path -> {
+            for (Path path : (Iterable<Path>) files::iterator) {
                 try {
                     Path outPath = outputDir.resolve(sourceDir.relativize(path).toString());
                     if (Files.isDirectory(path)) Files.createDirectories(outPath);
@@ -74,7 +88,7 @@ public class StreamTimerResources {
                 } catch (Exception e) {
                     throw new RuntimeException(e);
                 }
-            });
+            }
         } catch (Exception error) {
             System.err.println("Failed to copy assets from file system: " + error);
         }
